--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.10.4",
     "vue": "^3.2.13",
     "vue-countup-v3": "^1.0.13",
+    "vue-element-loading": "^3.0.1",
     "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
