--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "core-js": "^3.8.3",
     "gsap": "^3.10.4",
+    "three": "^0.142.0",
     "vue": "^3.2.13",
     "vue-countup-v3": "^1.0.13",
     "vue-element-loading": "^3.0.1",
