--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "core-js": "^3.8.3",
+    "desvg": "^1.0.2",
     "gsap": "^3.10.4",
     "three": "^0.142.0",
     "vue": "^3.2.13",
